// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HiveEngineToken > balanced > should return formatted balance for normal values 1`] = `"1,234.567"`;

exports[`HiveEngineToken > complete token snapshots > should match snapshot for fully configured token 1`] = `
HiveEngineToken {
  "balance": 1500.75,
  "balanced": [Function],
  "delegationEnabled": true,
  "delegations": [Function],
  "delegationsIn": 1000.5,
  "delegationsOut": 250.125,
  "hasDelegations": [Function],
  "icon": "https://cdn.com/leo.png",
  "name": "LeoFinance",
  "precision": 3,
  "stake": 5000.25,
  "staked": [Function],
  "stakedBalance": 5750.625,
  "stakingEnabled": true,
  "symbol": "LEO",
  "usdValue": 8765.43,
}
`;

exports[`HiveEngineToken > complete token snapshots > should match snapshot for fully configured token 2`] = `"1,500.750"`;

exports[`HiveEngineToken > complete token snapshots > should match snapshot for fully configured token 3`] = `"5,750.625"`;

exports[`HiveEngineToken > complete token snapshots > should match snapshot for fully configured token 4`] = `"(5,000.250 + 1,000.500 - 250.125)"`;

exports[`HiveEngineToken > complete token snapshots > should match snapshot for minimal token 1`] = `
HiveEngineToken {
  "balance": 0,
  "balanced": [Function],
  "delegationEnabled": false,
  "delegations": [Function],
  "delegationsIn": 0,
  "delegationsOut": 0,
  "hasDelegations": [Function],
  "icon": "",
  "name": "Minimal",
  "precision": 0,
  "stake": 0,
  "staked": [Function],
  "stakedBalance": 0,
  "stakingEnabled": false,
  "symbol": "MIN",
  "usdValue": 0,
}
`;

exports[`HiveEngineToken > constructor > should create token with all properties 1`] = `
HiveEngineToken {
  "balance": 100.5,
  "balanced": [Function],
  "delegationEnabled": true,
  "delegations": [Function],
  "delegationsIn": 10,
  "delegationsOut": 5,
  "hasDelegations": [Function],
  "icon": "https://example.com/leo.png",
  "name": "LEO Token",
  "precision": 3,
  "stake": 50.25,
  "staked": [Function],
  "stakedBalance": 55.25,
  "stakingEnabled": true,
  "symbol": "LEO",
  "usdValue": 125.5,
}
`;

exports[`HiveEngineToken > constructor > should handle missing optional fields with defaults 1`] = `
HiveEngineToken {
  "balance": 0,
  "balanced": [Function],
  "delegationEnabled": false,
  "delegations": [Function],
  "delegationsIn": 0,
  "delegationsOut": 0,
  "hasDelegations": [Function],
  "icon": "",
  "name": "",
  "precision": 0,
  "stake": 0,
  "staked": [Function],
  "stakedBalance": 0,
  "stakingEnabled": false,
  "symbol": "TEST",
  "usdValue": 0,
}
`;

exports[`HiveEngineToken > delegations > should return formatted delegation string when has delegations 1`] = `"(100.500 + 25.250 - 10.125)"`;

exports[`HiveEngineToken > staked > should return formatted staked balance when staking enabled 1`] = `"100.500"`;
